--- a/packages/impoexpo-client/src/locales/en.po
+++ b/packages/impoexpo-client/src/locales/en.po
@@ -113,9 +113,40 @@ msgid "for each item in the array, foreach"
 msgstr "for each item in the array, foreach"
 
 #: src/features/format-editor/nodes/builtin/array.tsx:35
+#: src/features/format-editor/nodes/builtin/array.tsx:44
+#: src/features/format-editor/nodes/builtin/array.tsx:61
 #: src/features/format-editor/nodes/builtin/conditional.tsx:66
 msgid "object"
 msgstr "object"
+
+#: src/features/format-editor/nodes/builtin/array.tsx:40
+msgid "is this the first iteration?"
+msgstr "is this the first iteration?"
+
+#: src/features/format-editor/nodes/builtin/array.tsx:41
+msgid "is first entry, is first object"
+msgstr "is first entry, is first object"
+
+#: src/features/format-editor/nodes/builtin/array.tsx:45
+#: src/features/format-editor/nodes/builtin/array.tsx:62
+msgid "must be connected to an iterator node. otherwise, will always return false."
+msgstr "must be connected to an iterator node. otherwise, will always return false."
+
+#: src/features/format-editor/nodes/builtin/array.tsx:51
+msgid "first iteration?"
+msgstr "first iteration?"
+
+#: src/features/format-editor/nodes/builtin/array.tsx:57
+msgid "is this the last iteration?"
+msgstr "is this the last iteration?"
+
+#: src/features/format-editor/nodes/builtin/array.tsx:58
+msgid "is last entry, is last object"
+msgstr "is last entry, is last object"
+
+#: src/features/format-editor/nodes/builtin/array.tsx:68
+msgid "last iteration?"
+msgstr "last iteration?"
 
 #: src/features/format-editor/nodes/builtin/conditional.tsx:12
 msgid "conditional"
@@ -184,6 +215,52 @@ msgstr "error message"
 #: src/features/format-editor/nodes/builtin/conditional.tsx:64
 #~ msgid "body..."
 #~ msgstr "body..."
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:15
+msgid "date & time"
+msgstr "date & time"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:57
+msgid "set locale"
+msgstr "set locale"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:58
+msgid "change country, change locale"
+msgstr "change country, change locale"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:60
+#: src/features/format-editor/nodes/builtin/date-time.tsx:74
+#: src/features/format-editor/nodes/builtin/date-time.tsx:88
+msgid "date"
+msgstr "date"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:62
+msgid "locale"
+msgstr "locale"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:71
+msgid "set time zone"
+msgstr "set time zone"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:72
+msgid "shift date, shift time, change time zone"
+msgstr "shift date, shift time, change time zone"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:76
+msgid "time zone"
+msgstr "time zone"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:85
+msgid "date -> string (preset)"
+msgstr "date -> string (preset)"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:86
+msgid "convert date to string, format date to string"
+msgstr "convert date to string, format date to string"
+
+#: src/features/format-editor/nodes/builtin/date-time.tsx:90
+msgid "preset"
+msgstr "preset"
 
 #: src/features/format-editor/nodes/builtin/literals.tsx:12
 msgid "literals"
@@ -386,9 +463,9 @@ msgstr "replacement"
 #: src/features/format-editor/nodes/builtin/strings.tsx:124
 #: src/features/format-editor/nodes/common.tsx:32
 #: src/features/format-editor/nodes/common.tsx:56
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:68
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:78
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:99
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:71
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:85
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:111
 msgid "result"
 msgstr "result"
 
@@ -716,53 +793,63 @@ msgstr "back to file upload"
 
 #: src/integrations/microsoft/microsoft-word/integration.tsx:17
 #: src/integrations/microsoft/microsoft-word/integration.tsx:63
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:57
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:60
 msgid "Microsoft Word"
 msgstr "Microsoft Word"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:63
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:65
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:66
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:68
 msgid "text"
 msgstr "text"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:73
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:76
 msgid "list"
 msgstr "list"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:75
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:85
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:78
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:92
 msgid "items"
 msgstr "items"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:83
-msgid "grouped list"
-msgstr "grouped list"
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:80
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:106
+msgid "automatically separate list items"
+msgstr "automatically separate list items"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:86
-msgid "group criteria"
-msgstr "group criteria"
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:81
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:107
+msgid "automatically add a semicolon (;) to every list item except for the last one, which will have a dot (.) added instead."
+msgstr "automatically add a semicolon (;) to every list item except for the last one, which will have a dot (.) added instead."
 
 #: src/integrations/microsoft/microsoft-word/nodes.tsx:86
 #~ msgid "group by"
 #~ msgstr "group by"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:88
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:90
+msgid "grouped list"
+msgstr "grouped list"
+
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:93
+msgid "group criteria"
+msgstr "group criteria"
+
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:95
 msgid "sort criteria"
 msgstr "sort criteria"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:89
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:96
 msgid "affects how the groups will be arranged in the document"
 msgstr "affects how the groups will be arranged in the document"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:92
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:100
 msgid "in ascending order"
 msgstr "in ascending order"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:93
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:101
 msgid "in descending order"
 msgstr "in descending order"
 
-#: src/integrations/microsoft/microsoft-word/nodes.tsx:96
+#: src/integrations/microsoft/microsoft-word/nodes.tsx:104
 msgid "group title"
 msgstr "group title"
 
